--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>client</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
+    <title>HacktivPress</title>
   </head>
   <body>
     <div id="app"></div>
